{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 41,
  "lineage": "9092b8d5-d015-328e-507e-894a01c1c1da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0176270c1fea9347f",
            "arn": "arn:aws:ec2:us-east-1:254415067440:elastic-ip/eipalloc-0176270c1fea9347f",
            "association_id": "eipassoc-0363a812d8c005808",
            "domain": "vpc",
            "id": "eipalloc-0176270c1fea9347f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c6776d9b22ecefed",
            "private_dns": "ip-10-0-0-66.ec2.internal",
            "private_ip": "10.0.0.66",
            "public_dns": "ec2-18-213-248-130.compute-1.amazonaws.com",
            "public_ip": "18.213.248.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mwaa-nat-eip"
            },
            "tags_all": {
              "Name": "mwaa-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254415067440:internet-gateway/igw-0f81e3b7e37ffead1",
            "id": "igw-0f81e3b7e37ffead1",
            "owner_id": "254415067440",
            "tags": {
              "Name": "mwaa-igw"
            },
            "tags_all": {
              "Name": "mwaa-igw"
            },
            "vpc_id": "vpc-0a2c4e0199f12d7ad"
          },
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0176270c1fea9347f",
            "association_id": "eipassoc-0363a812d8c005808",
            "connectivity_type": "public",
            "id": "nat-0f99bdbce6aa71cc9",
            "network_interface_id": "eni-0c6776d9b22ecefed",
            "private_ip": "10.0.0.66",
            "public_ip": "18.213.248.130",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bb3cf89e29228570",
            "tags": {
              "Name": "mwaa-nat-gateway"
            },
            "tags_all": {
              "Name": "mwaa-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254415067440:route-table/rtb-094c29e3a3f5a5138",
            "id": "rtb-094c29e3a3f5a5138",
            "owner_id": "254415067440",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f99bdbce6aa71cc9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mwaa-private-rt"
            },
            "tags_all": {
              "Name": "mwaa-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2c4e0199f12d7ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254415067440:route-table/rtb-0b943210c887bb1c0",
            "id": "rtb-0b943210c887bb1c0",
            "owner_id": "254415067440",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f81e3b7e37ffead1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mwaa-public-rt"
            },
            "tags_all": {
              "Name": "mwaa-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2c4e0199f12d7ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba93c83162f0e110",
            "route_table_id": "rtb-094c29e3a3f5a5138",
            "subnet_id": "subnet-0f4074beee1820a29"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8fa4ab9b4d8d05d",
            "route_table_id": "rtb-094c29e3a3f5a5138",
            "subnet_id": "subnet-026115113824a0975"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8f88318cef765bf",
            "route_table_id": "rtb-0b943210c887bb1c0",
            "subnet_id": "subnet-0bb3cf89e29228570"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mwaa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254415067440:security-group/sg-080c6a5941ae0dabf",
            "description": "Security group for MWAA environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080c6a5941ae0dabf",
            "ingress": [],
            "name": "mwaa-security-group",
            "name_prefix": "",
            "owner_id": "254415067440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mwaa-sg"
            },
            "tags_all": {
              "Name": "mwaa-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2c4e0199f12d7ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254415067440:subnet/subnet-0f4074beee1820a29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4074beee1820a29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254415067440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mwaa-private-subnet-1"
            },
            "tags_all": {
              "Name": "mwaa-private-subnet-1"
            },
            "vpc_id": "vpc-0a2c4e0199f12d7ad"
          },
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254415067440:subnet/subnet-026115113824a0975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026115113824a0975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254415067440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mwaa-private-subnet-2"
            },
            "tags_all": {
              "Name": "mwaa-private-subnet-2"
            },
            "vpc_id": "vpc-0a2c4e0199f12d7ad"
          },
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254415067440:subnet/subnet-0bb3cf89e29228570",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb3cf89e29228570",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "254415067440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mwaa-public-subnet"
            },
            "tags_all": {
              "Name": "mwaa-public-subnet"
            },
            "vpc_id": "vpc-0a2c4e0199f12d7ad"
          },
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mwaa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254415067440:vpc/vpc-0a2c4e0199f12d7ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-046a2e6dacee35aa0",
            "default_route_table_id": "rtb-0e3a7fa55eb9eb415",
            "default_security_group_id": "sg-092ec7165bbeddf39",
            "dhcp_options_id": "dopt-0c89d16e15d4b548d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a2c4e0199f12d7ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3a7fa55eb9eb415",
            "owner_id": "254415067440",
            "tags": {
              "Name": "mwaa-vpc"
            },
            "tags_all": {
              "Name": "mwaa-vpc"
            }
          }
        }
      ]
    }
  ]
}